# allegro5-tiled-renderer

./: .clang-format  CMakeLists.txt  README.md
include/: GroupLayerRenderer.h  ImageLayerRenderer.h  MapRenderer.h  ObjectLayerRenderer.h  RendererTileset.h  TileLayerRenderer.h
lib/tmxparser/: CMakeLists.txt
lib/tmxparser/cmake/: deps.cmake
src/: GroupLayerRenderer.cpp  ImageLayerRenderer.cpp  MapRenderer.cpp  ObjectLayerRenderer.cpp  RendererTileset.cpp  TileLayerRenderer.cpp
test/: test.cpp
test_data/: anotherset.tsx  anothertest.tmx  beach_tileset.tsx  externtileset.tmx  island.tmx  test.tsx  test_tiled.tmx
test_data/maps/: level1.tmx
